Smaller Fixes and Timezone Var
- Go Work Changes And
- FE  Entrypoint CRLF to LF
- Docker Compose Timezone

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: src/backend
       dockerfile: Dockerfile
+      args:
+        - TZ=${TZ:-Europe/Berlin}
     image: hellerhammer/nutrack-backend:${TAG:-latest}
     devices:
       - "/dev/input:/dev/input"
