--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     image: hellerhammer/nutrack-frontend:${TAG:-latest}
     ports:
-      - "82:80"
+        - "${FRONTEND_PORT:-3000}:80"
     networks:
       - nutrack-network
     depends_on:
@@ -24,7 +24,7 @@ services:
     devices:
       - "/dev/input:/dev/input"
     ports:
-      - "8080:8080"
+      - "${BACKEND_PORT:-8080}:8080"
     networks:
       - nutrack-network
     privileged: true
