--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,14 @@ services:
       - nutrack-backend
     restart: always
     environment:
-      - REACT_APP_BACKEND_URL=${HOST_URL:-localhost}
+      - REACT_APP_BACKEND_URL=${HOST_URL:-localhost}:${BACKEND_PORT:-8080}
       - REACT_APP_USE_ELECTRON_IPC=${REACT_APP_USE_ELECTRON_IPC:-0}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
   nutrack-backend:
     build:
       context: src/backend
@@ -38,6 +44,12 @@ services:
       - ./tokens:/app/tokens
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
 networks:
   nutrack-network:
