Revert "Update docker-compose.yml"
This reverts commit 5eae37ea27d4b285ceb5593b9fafc721a8dcc22e.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - nutrack-backend
     restart: always
     environment:
-      - REACT_APP_BACKEND_URL=${HOST_URL:-localhost}
+      - REACT_APP_BACKEND_URL=${HOST_URL:-localhost}:${BACKEND_PORT:-8080}
       - REACT_APP_USE_ELECTRON_IPC=${REACT_APP_USE_ELECTRON_IPC:-0}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80"]
