--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     restart: always
     environment:
       - GIN_MODE=release
-      - ALLOWED_IPS=${HOST_URL:-localhost}:${BACKEND_PORT:-3000}, localhost, nutrack-frontend
+      - ALLOWED_IPS=${HOST_URL:-localhost}:${FRONTEND_PORT:-3000}, localhost, nutrack-frontend
       - HOST_URL=${HOST_URL:-localhost}:${BACKEND_PORT:-8080}
     volumes:
       - ./:/app/data
